strictload changes, and other misc stuff
also loading screens support spritesheets now

--- a/Loadingscreens/meme.ini
+++ b/Loadingscreens/meme.ini
@@ -3,3 +3,14 @@ image path = larry.jpg
 align x = center
 align y = center
 text1 = suck my dick
+
+[barrel of doom]
+image path = final boss anim.png
+anim = 1
+animWidth = 400
+animHeight = 400
+animFrameCount = 4
+animMillisecondDelay = 50
+align x = center
+align y = center
+text1 = the final boss
