gatea tweaks, rmesh viewer improvements

--- a/Data/materials.ini
+++ b/Data/materials.ini
@@ -43,3 +43,9 @@ bump = GFX\map\scp1162wallbump.jpg
 
 [containment_doors.jpg]
 bump = GFX\map\containmentdoorsbump.jpg
+
+[grass2.jpg]
+bump = GFX\map\grass2bump.jpg
+
+[gravel.jpg]
+bump = GFX\map\gravelbump.jpg
