minor adjustments, additions, and fixes

--- a/Loadingscreens/loadingscreens.ini
+++ b/Loadingscreens/loadingscreens.ini
@@ -19,9 +19,20 @@ image path = NVG.jpg
 align x = right
 align y = top
 disablebackground = true
-text1 = Scramble Goggles are a counter measure to accidental viewing of SCP-096's face.
-text2 = Every image of motion taken by the cameras search for SCP-096's face and alter it in such a way that could prevent triggering it.
+text1 = Scramble goggles are a counter measure to the accidental viewing of SCP-096's face.
+text2 = Every image of motion taken by the scramble goggles' cameras search for SCP-096's face and alter or distort it in such a way that could prevent triggering it.
 text3 = The now altered image of motion is now shown to the user allowing them to evacuate or contian SCPs without the worry of seeing SCP-096's face.
+text4 = The scramble goggles issued at Site-[REDACTED] have been modified to remove their initial programming flaw, allowing them to be used worry-free.
+
+[SCP-008]
+image path = 008.png
+align x = left
+align y = bottom
+disablebackground = true
+text1 = SCP-008 is a complex prion, samples of which are stored in each of the known G2 sites. Research into SCP-008 is highly classified and primarily aimed at preventing research which may lead to the synthesis of SCP-008 in the distant future.
+text2 = Traits of the SCP-008 prion include: 100% infectiousness, 100% lethality, transmission through exposed mucous membranes and all bodily fluids, not airborne or waterborne.
+text3 = In late stage SCP-008 infection, subject becomes limited to basic physical activities, including standing up, balancing on two legs, walking, biting, grabbing, and crawling. Subject will energetically move towards sights, sounds, and smells it associates with living humans.
+text4 = Subject will attempt to ingest living humans if physical contact is made. Neutralizing fully-infected subjects requires significant cranial trauma.
 
 [SCP-012]
 image path = 012.jpg
@@ -102,6 +113,15 @@ align x = left
 align y = bottom
 text1 = SCP-173 is constructed from concrete and rebar with traces of Krylon brand spray paint. It is animate and extremely hostile.
 text2 = The object cannot move while within a direct line of sight. Line of sight must not be broken at any time with SCP-173. Personnel assigned to enter container are instructed to alert one another before blinking.
+
+[SCP-178]
+image path = 178.png
+align x = left
+align y = top
+disablebackground = true
+text1 = SCP-178 is a pair of white stereoscopic (“3-D”) glasses with a rectangular white cardboard frame and lenses of transparent blue and red (left and right lenses, respectively) plastic.
+text2 = When worn, the wearer begins perceiving large bipedal entities in addition to its ordinary surroundings.
+text3 = Any attempt by the wearer or any other personnel to directly interact with the entities results in severe lacerations suddenly appearing on persons involved.
 
 [SCP-205]
 image path = 205.jpg
@@ -245,7 +265,17 @@ align x = right
 align y = bottom
 text1 = SCP-1025 is a hardcover book, approximately 1,500 pages long. The front cover and spine feature the title "The Encyclopedia of Common Diseases".
 text2 = No other copies of a book with that title and publisher have been found, and no record of the publisher exists.
-text3 = Readers of the book seem to exhibit symptoms of any disease they read about. The effect can take between _ and __ hours to manifest.
+text3 = Readers of the book seem to exhibit symptoms of any disease they read about. The effect can take between [DELETED] and [DATA EXPUNGED] hours to manifest.
+
+[SCP-1074]
+image path = 1074.jpg
+align x = left
+align y = bottom
+disablebackground = true
+text1 = SCP-1074 is a portrait-sized oil painting on canvas, produced by an unidentified artist. When photographed or videotaped, the entirety of SCP-1074 appears to be painted a uniform shade of gray, with distinctly visible brush strokes.
+text2 = When SCP-1074 is viewed by a human being, the observer immediately begins to exhibit physiological symptoms similar to the onset of Stendhal syndrome, including increased heart rate, sweating, and vertigo.
+text3 = Statements from persons so affected describe it not as a blank gray canvas, but as a highly detailed painting of an inconsistent nature.
+text4 = No two individuals exposed to SCP-1074 have described the same painting; recurring themes in subject statements describe imagery suggesting human mortality, individual insignificance, legal or moral judgment, religious eschatology, and [REDACTED].
 
 [SCP-1123]
 image path = 1123.jpg
