new rooms n' crap
also some adjustments

--- a/Data/rooms.ini
+++ b/Data/rooms.ini
@@ -109,16 +109,30 @@ shape = 1
 commonness = 100
 zone1=1
 
-[room1conf]
-descr=LCZ Styled Confrence Endroom.
-mesh path=GFX\map\room1conf.rmesh
+[room1collapsed_hall]
+descr=A variant of room2_2 that is collapsed and serves as an endroom.
+mesh path=GFX\map\room1collapsed_hall.rmesh
 shape = 1
 commonness = 100
+zone1=1
+
+[room1collapsed_hall2]
+descr=A variant of room2 that is collapsed and serves as an endroom.
+mesh path=GFX\map\room1collapsed_hall2.rmesh
+shape = 1
+commonness = 100
+zone1=1
+
+[room1conf]
+descr=LCZ styled confrence endroom.
+mesh path=GFX\map\room1conf.rmesh
+shape = 1
+commonness = 80
 zone1=1
 zone3=3
 
 [room2conf]
-descr=LCZ Styled Confrence Endroom With an open vent Leading to Another Confrence Endroom.
+descr=LCZ styled confrence endroom With an open vent leading to another confrence endroom.
 mesh path=GFX\map\room2conf.rmesh
 shape = 2
 commonness = 100
@@ -459,6 +473,14 @@ descr=A small, red-lit, HCZ-styled endroom.
 mesh path=GFX\map\endroom2_opt.rmesh
 shape = 1
 commonness = 100
+zone1=2
+
+[room1collapsed_hall3]
+descr=A variant of tunnel that is collapsed and serves as an endroom.
+mesh path=GFX\map\room1collapsed_hall3.rmesh
+shape = 1
+commonness = 100
+walksound = 1
 zone1=2
 
 [testroom]
