--- a/Data/achievementstrings_meme.ini
+++ b/Data/achievementstrings_meme.ini
@@ -1,152 +1,152 @@
 [s0]
-string1=Colapse
+string1=BOORING
 image=AchvFoundation
-AchvDesc=Experience the Intro Sequence.
+AchvDesc=actually sat through the fucking intro sequence
 
 [s1]
-string1=Tough Eh?
+string1=can this go any slower??
 image=AchvFoundation
-AchvDesc=Access Heavy Containment Zone.
+AchvDesc=yes, yes it can
 
 [s2]
-string1=Getting Close...
+string1=HOW BIG IS THIS MAP
 image=AchvFoundation
-AchvDesc=Access Entrance Zone.
+AchvDesc=had to, sorry
 
 [s3]
-string1=Access via disruption
+string1=funni skeleton key
 image=Achv005
-AchvDesc=Aquired the Skeleton Key.
+AchvDesc=omni is useless
 
 [s4]
-string1=Biohazard
+string1=Covid 19
 image=Achv008
-AchvDesc=Encountered the Zombie Plague.
+AchvDesc=Encountered the Plague of the 2020s.
 
 [s5]
-string1=Frozen when Heated
+string1=shit crystals
 image=Achv009
-AchvDesc=Encountered the Red Ice.
+AchvDesc=there's feces in the ice
 
 [s6]
-string1=Scribe
+string1=OWW MY FUCKING EARS
 image=Achv012
-AchvDesc=Encountered the Bad Composition.
+AchvDesc=encountered the worst piece of music ever
 
 [s7]
-string1=Infinite Energy
+string1=literally impossible lol
 image=Achv018
-AchvDesc=Encountered the Bouncy Ball's Containment Chamber.
+AchvDesc=this fucking ball is a perpetual motion machine
 
 [s8]
-string1=Curtains Down
+string1=curtains up
 image=Achv035
-AchvDesc=Encountered the Possessive Mask.
+AchvDesc=nope nope nope nope nope nope nope nope nope nop-
 
 [s9]
-string1=Doctor, Doctor
+string1=house md
 image=Achv049
-AchvDesc=Found the cure.
+AchvDesc=found dr. gregory house
 
 [s10]
-string1=Anti-Meme
+string1=what
 image=Achv055
-AchvDesc=Recontained SCP-055.
+AchvDesc=what the fuck is an scp-055??
 
 [s11]
-string1=Who's Eric?
+string1=spaghetti
 image=Achv066
-AchvDesc=Encountered Eric's Toy.
+AchvDesc=spaghetti
 
 [s12]
-string1=Ahead of It's Time
+string1=apple iie
 image=Achv079
-AchvDesc=Encountered the Old AI.
+AchvDesc=out of date as fuck
 
 [s13]
-string1=Don't Look At Me
+string1=look at me
 image=Achv096
-AchvDesc=Encountered the Shy Guy.
+AchvDesc=it'll be funny, trust
 
 [s14]
-string1=A Decayed March
+string1=vietnam
 image=Achv106
-AchvDesc=Encountered the Old Man.
+AchvDesc="why are the trees talking??"
 
 [s15]
-string1=Dirty Metal
+string1=metal
 image=Achv148
-AchvDesc=Acquired the "Telekill Alloy".
+AchvDesc=it's literally just metal
 
 [s16]
-string1=Depth Perception
+string1=bugga
 image=Achv178
-AchvDesc=Put on a pair of stereoscopic glasses.
+AchvDesc=touch the bugga
 
 [s17]
-string1=Femme Fatale
+string1=sex
 image=Achv205
-AchvDesc=Encountered the Shadow Lamps.
+AchvDesc=sex. WHAT? SEX. AHHHH-
 
 [s18]
-string1=STOP HIDING
+string1=notarget
 image=Achv268
-AchvDesc=Put on the Irish Hat.
+AchvDesc=that's all it is, just notarget
 
 [s19]
-string1=OUT OF RANGE
+string1=cum
 image=Achv294
-AchvDesc=Obtained a liquid from the Coffee Machine.
+AchvDesc=it better not be cum
 
 [s20]
-string1=The Corner of Your Eye...
+string1=little shit
 image=Achv372
-AchvDesc=Encountered the Peripheral Jumper.
+AchvDesc=jumpscare machine
 
 [s21]
-string1="Reggae, man."
+string1=weed
 image=Achv420
-AchvDesc=Smoked some good ass shit.
+AchvDesc=hi ass fuk
 
 [s22]
-string1=Light of Life
+string1=some goofy ass locket
 image=Achv427
-AchvDesc=Found and equipped the "Lovecraftian Locket".
+AchvDesc=i don't think its worth it bro
 
 [s23]
-string1=A Taste of Immortality
+string1=heal
 image=Achv500
-AchvDesc=Swallowed a sample of Panacea.
+AchvDesc=literally just heal
 
 [s24]
-string1=If You Ring It, He Will Come
+string1=OH MISTER RABBIT
 image=Achv513
-AchvDesc=Encountered an Old Cowbell.
+AchvDesc=OH MISTER RABBIT
 
 [s25]
-string1=Mental Exhaustion
+string1=eyelid time
 image=Achv714
-AchvDesc=Found a Jaded Ring.
+AchvDesc=eyelid time
 
 [s26]
-string1="by researcher james, age 11"
+string1=scariest scp
 image=Achv789
-AchvDesc=Encountered the Butt Ghost.
+AchvDesc=i will eat your but
 
 [s27]
-string1=Blue Hue
+string1=key
 image=Achv860
-AchvDesc=Found a Blue Key.
+AchvDesc=your smart and grabbed the key
 
 [s28]
-string1=Interference
+string1=spoopy
 image=Achv895
-AchvDesc=Encountered an Old Coffin.
+AchvDesc=turn off the camera
 
 [s29]
-string1=Efficency
+string1=flip
 image=Achv914
-AchvDesc=Encountered the Clockworks Machine.
+AchvDesc=i changed the settings :)
 
 [s30]
 string1=Show Yourself
