meme mode stuff

--- a/Data/achievementstrings_meme.ini
+++ b/Data/achievementstrings_meme.ini
@@ -124,9 +124,9 @@ image=Achv513
 AchvDesc=OH MISTER RABBIT
 
 [s25]
-string1=eyelid time
+string1=immortal
 image=Achv714
-AchvDesc=eyelid time
+AchvDesc=immortal to pestilence
 
 [s26]
 string1=scariest scp
@@ -144,101 +144,101 @@ image=Achv895
 AchvDesc=turn off the camera
 
 [s29]
-string1=flip
+string1=914
 image=Achv914
 AchvDesc=i changed the settings :)
 
 [s30]
-string1=Show Yourself
+string1=dog
 image=Achv939
-AchvDesc=Encountered the Creatures with Many Voices.
+AchvDesc=yeah just kinda don't make a sound
 
 [s31]
-string1=Rapid Eye Movement
+string1=eyelid time
 image=Achv966
-AchvDesc=Encountered the Sleep Killers.
+AchvDesc=eyelid time
 
 [s32]
-string1=Recursive Spacial Phenomenon
+string1=ooo
 image=Achv970
-AchvDesc=Encountered a Recursive Room.
+AchvDesc=floating guy aint here yet
 
 [s33]
-string1="Potential Bioweapon"
+string1=uhh, it's just a book...
 image=Achv1025
-AchvDesc=Read the Encyclopedia of Common Diseases.
+AchvDesc=...that gives you covid
 
 [s34]
-string1=The Architect
+string1=bear plush
 image=Achv1048
-AchvDesc=Encountered the Builder Bear.
+AchvDesc=bro ran away from build a' bear
 
 [s35]
-string1=The Final Solution
+string1=german man
 image=Achv1123
-AchvDesc=Encountered the Atrocity Skull.
+AchvDesc=you touched the skull
 
 [s36]
-string1=Not as Sucessful
+string1=ronald regan
 image=Achv1981
-AchvDesc=Found The Betamax Tape.
+AchvDesc=bottom text
 
 [s37]
-string1=:3
+string1=furry
 image=AchvFurry
-AchvDesc=Yeah uhhh, no.
+AchvDesc=¯\_(ツ)_/¯
 
 [s38]
-string1=The Containment Breach
+string1=39 burried, 0 found.
 image=AchvMaynard
-AchvDesc=Entered Doctor Maynard's office.
+AchvDesc=maynard
 
 [s39]
-string1=World-Ending Scenario
+string1=harp
 image=AchvHarp
-AchvDesc=Entered Doctor Harp's office.
+AchvDesc=yeah i don't know who that is
 
 [s40]
-string1=Technical Accomplishments
+string1=half broken navigator
 image=AchvSNAV
-AchvDesc=Acquired the S-NAV Navigator Ultimate.
+AchvDesc=snav - best item
 
 [s41]
-string1=Doesn't Override The Lockdown
+string1=useless
 image=AchvOmni
-AchvDesc=Acquired an Omni-level Keycard.
+AchvDesc=literally the same as key5
 
 [s42]
-string1=Shell Shocked
+string1=ow my fuckin eyes
 image=AchvTesla
-AchvDesc=Lured the Old Man through a Tesla gate.
+AchvDesc=my eyes hurt
 
 [s43]
-string1=No Man's Land
+string1=luck is on your side
 image=AchvPD
-AchvDesc=Escaped the Old Man's Pocket Dimension.
+AchvDesc=time to fall in again :3
 
 [s44]
-string1=Pieces of the Past
+string1=that's literally just a hole
 image=Achv1162
-AchvDesc=Encountered the Hole In The Wall.
+AchvDesc=it's just a hole
 
 [s45]
-string1=Screams of The Present
+string1=escaped an scp
 image=Achv1499
-AchvDesc=Wore a GP-5 Gas Mask.
+AchvDesc=escaped an scp
 
 [s46]
-string1=Intentional Bugs
+string1=totally definately work
 image=Achvscrabble
-AchvDesc=Wore a pair of Scramble Goggles.
+AchvDesc=i definately didn't change anything
 
 [s47]
-string1=Survival in a Nightmare
+string1=keter
 image=AchvKeter
-AchvDesc=Beat the game on Keter difficulty.
+AchvDesc=good job
 
 [s48]
-string1=Fair Play
+string1=no console, somehow
 image=AchvConsole
-AchvDesc=You finished the game without cheating.
+AchvDesc=good on you
