--- a/Data/rooms.ini
+++ b/Data/rooms.ini
@@ -16,6 +16,18 @@ ambience8 = SFX\Ambient\Room ambience\fuelpump.ogg
 ambience9 = SFX\Ambient\Room ambience\Fan.ogg
 ambience10 = SFX\Ambient\Room ambience\servers1.ogg
 
+[meme room ambience]
+ambience1 = SFX\Ambient\Room ambience\rumble.ogg
+ambience2 = SFX\Ambient\Room ambience\lowdrone.ogg
+ambience3 = SFX\Ambient\Room ambience\pulsing.ogg
+ambience4 = SFX\Ambient\Room ambience\ventilation.ogg
+ambience5 = SFX\Ambient\Room ambience\drip.ogg
+ambience6 = SFX\Alarm\Alarm.ogg
+ambience7 = SFX\Ambient\Room ambience\895.ogg
+ambience8 = SFX\Ambient\Room ambience\fuelpump.ogg
+ambience9 = SFX\Ambient\Room ambience\Fan_meme.ogg
+ambience10 = SFX\Ambient\Room ambience\servers1.ogg
+
 ;LIGHT CONTAINMENT ZONE ROOMS
 ;============================
 [lockroom]
