upgrade language system

--- a/defaultOptions.ini
+++ b/defaultOptions.ini
@@ -7,6 +7,7 @@ gfx driver = 3
 audio driver = 0
 brightness = 50
 screengamma = 1.0
+language = English
 show FPS = 1
 framelimit = 0
 vsync = 0
@@ -46,7 +47,6 @@ sound volume = 1.0
 enable user tracks = 1
 user track setting = 1
 sfx release = 1
-subtitlesLanguage = English
 
 [binds]
 Right key = 32
